# UMBRA

./: .claudeagent  .gitignore  README.md  TODOs.md  extract_all_checkpoints.sh  extract_all_checkpoints_finetune.sh  extract_all_checkpoints_finetune_splits.sh  extract_embeddings.py  extract_embeddings_finetune.py  finetune.py  pretrain.py  pyproject.toml  requirements.txt  tsne.ipynb  visualize_embeddings.py
.claude/agents/: ai-research-engineer.md  python-linter.md
augmentations/: __init__.py
callbacks/: monitor.py
configs/: task_config.py
data/: __init__.py  combined_datamodule.py  contrastive.py  contrastive_datamodule.py  contrastive_dataset.py  finetuning_datamodule.py  finetuning_dataset.py  mae_datamodule.py  mae_dataset.py
files/cl/: embeddings.pt  metadata.csv
files/mae_cl/: embeddings.pt
files/mae_mcl/: embeddings.pt
files/mcl/: embeddings.pt
jupyter_notebooks/: embedding_analysis.ipynb  embedding_space_visualization.ipynb  multi_dataset_visualization.ipynb  paper_figures.ipynb  visualization_isbi.ipynb
models/: blocks.py  callbacks.py  finetuning.py  foundation.py  networks.py  schedulers.py
run_scripts/: matej_contrastive.sh  matej_contrastive_regular.sh
tests/: conftest.py  test_datamodules.py  test_masking.py  test_transforms.py
transforms/: __init__.py  composed.py  mask.py  unit.py
utils/: __init__.py  croppad.py  data.py  io.py  masking.py  metrics.py  misc.py  nets.py  spatial.py  visualization.py
