[project]
name = "umbra"
version = "0.1.0"
description = "Foundation model for medical image analysis with modality-agnostic learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "monai>=1.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "fire>=0.5.0",
    "wandb>=0.15.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
